Spacing fixed on 13inch screen

--- a/css/projects.css
+++ b/css/projects.css
@@ -20,13 +20,6 @@ html {
     --p-font:1.1rem;
 }
 
-body{
-    background-color: #0c0c0c;
-    display: flex;
-    flex-direction: column;
-}
-
-
 
 header{
     position: fixed;
@@ -72,29 +65,34 @@ header a{
 }
 
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80vh;
-    margin: 0;
-    /* text-align: center; */
-    font-family: Arial, sans-serif;
 
+    background-color: #0c0c0c;
+    width: 100vw;
+    /* margin: 0; */
+    font-family: Arial, sans-serif; 
+    overflow-x: hidden;
 }
+
+.container {
+    width: 100vw;
+    overflow-x: hidden;
+}
+
+
+
 
 .grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 25px;
-    max-width: 600px; /* Adjust the max-width to your preference */
-    margin: 0 auto; /* Center the grid horizontally */
-    margin-left: 25%;
-    margin-top: 570px;
+    max-width: 600px;
+    margin: 25%;
+    margin-top: 270px;
     padding-bottom: 25px;
 }
 
 .grid-item {
-    
+
     /* border: 1px solid #ccc; */
     border-radius: 10px; /* Add border radius here */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -116,6 +114,7 @@ body {
 }
 
 
+/* responsiveness */
 
 @media (max-width:768px) {
     /* menu code */
@@ -147,7 +146,7 @@ body {
         right: -450px;
         top: 50px;
     }
-    
+
     .navbar a {
         font-size: 18px;
         margin: 0 10px;
@@ -217,4 +216,3 @@ body {
         padding-bottom: 24px;
     }
 }
-
